--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -7,12 +7,12 @@
     android:background="@color/white"
     tools:context=".TaskFragment">
 
-    <Button
+    <TextView
         android:id="@+id/settings"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="22dp"
+        android:layout_marginTop="19dp"
         android:background="@drawable/menu_fill0_wght400_grad0_opsz24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -32,7 +32,7 @@
         android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="331dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="20dp"
         android:background="#00664F"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/settings" />
@@ -43,6 +43,21 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="224dp"
         android:background="@drawable/panel"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/view" />
+
+    <ImageView
+        android:layout_width="270dp"
+        android:layout_height="267dp"
+        android:background="@drawable/ink"
+        app:layout_constraintBottom_toTopOf="@+id/view2"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
+        android:layout_width="334dp"
+        android:layout_height="232dp"
+        android:layout_marginStart="192dp"
+        android:background="@drawable/earth"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view" />
 
@@ -62,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="28dp"
-                android:text="Subjects"
+                android:text="Subjects Task"
                 android:textSize="25dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -72,7 +87,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
-                android:text="Recommendation for you"
+                android:text="Recommendations for you"
                 android:textColor="#5E000000"
                 android:textSize="15dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -97,10 +112,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:clipToPadding="false"
-                        android:layout_marginEnd="20dp"
+                        android:layout_marginEnd="40dp"
                         android:orientation="horizontal"
                         android:paddingBottom="30dp"
-                        tools:listitem="@layout/recomendation_subjects"
+                        tools:listitem="@layout/recommendation_subj"
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="1.0"
@@ -118,7 +133,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="24dp"
-                android:text="Your Schedule"
+                android:text="Tasked Today"
                 android:textSize="25dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/horizontal_layout" />
@@ -128,7 +143,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="40dp"
-                android:text="Next Lesson"
+                android:text="Don't forget to do your tasks!"
                 android:textColor="#5E000000"
                 android:textSize="15dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -150,14 +165,15 @@
                 tools:ignore="MissingConstraints"
                 tools:listitem="@layout/next_lesson" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="aiojsdioajd"
-                android:layout_marginTop="300dp"
-                android:visibility="invisible"
-                app:layout_constraintTop_toBottomOf="@+id/nextlesson"
-                tools:layout_editor_absoluteX="224dp" />
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="aiojsdioajd"-->
+<!--                android:layout_marginTop="300dp"-->
+<!--                android:visibility="invisible"-->
+<!--                app:layout_constraintTop_toBottomOf="@+id/nextlesson"-->
+<!--                tools:layout_editor_absoluteX="224dp"-->
+<!--                tools:ignore="MissingConstraints" />-->
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
