--- a/app/src/main/res/layout/next_lesson.xml
+++ b/app/src/main/res/layout/next_lesson.xml
@@ -3,39 +3,71 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="335dp"
-    android:layout_height="220dp"
+    android:layout_height="200dp"
     app:cardBackgroundColor="@color/white">
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="335dp"
-        android:layout_height="200dp"
+        android:layout_height="180dp"
         android:background="@drawable/subject_button"
         android:backgroundTint="#4DC591"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="8dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <Button
+            <ImageView
+                android:layout_width="120dp"
+                android:layout_height="100dp"
+                android:background="@drawable/design2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginEnd="15dp"
+                android:layout_marginEnd="20dp"
+                android:backgroundTint="@color/white"
                 android:background="@drawable/line"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/textView15"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="28dp"
-                android:layout_marginTop="20dp"
-                android:text="ITE-306"
+                android:layout_marginTop="28dp"
+                android:text="2 Tasks"
                 android:textColor="@color/white"
-                android:textSize="30dp"
+                android:textSize="40dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textView16"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="28dp"
+                android:layout_marginTop="16dp"
+                android:text="ITE-260"
+                android:textColor="@color/white"
+                android:textSize="20dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView15" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="28dp"
+                android:text="Computer Programming 1"
+                android:textColor="@color/white"
+                android:textSize="15dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView16" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
